networking/disallow-nodeport-services/.chainsaw-test/invalid-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: invalid-nodeport
spec:
  type: NodePort
  selector:
    app: myapp
  ports:
    - port: 80
      targetPort: 8080
      nodePort: 30080
