networking/disallow-nodeport-services/.chainsaw-test/valid-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: valid-service
spec:
  selector:
    app: myapp
  ports:
    - port: 80
      targetPort: 8080
