networking/disallow-nodeport-services/.chainsaw-test/chainsaw-test.yaml
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: disallow-nodeport-services
spec:
  steps:
    - name: 01 - Apply policy
      try:
        - apply:
            file: ../policy.yaml
    - name: 02 - Wait for policy to be ready
      try:
        - assert:
            resource:
              apiVersion: kyverno.io/v1
              kind: ClusterPolicy
              metadata:
                name: disallow-nodeport-services
              status:
                conditions:
                  - reason: Succeeded
                    status: "True"
                    type: Ready
    - name: 03 - ClusterIP service should be admitted
      try:
        - apply:
            file: valid-service.yaml
            expect:
              - check:
                  ($error == null): true
    - name: 04 - NodePort service should be blocked
      try:
        - apply:
            file: invalid-nodeport.yaml
            expect:
              - check:
                  ($error != null): true
